<resources>
    <string name="app_name">RoomDao</string>
    <string name="welcome_to_the_start_page_choose_type_of_information_which_u_want_to_see">Welcome to the start page! Choose type of information which u want to see</string>
    <string name="tournaments">Tournaments</string>
    <string name="clubs">Clubs</string>
    <string name="delete_all">delete all</string>
    <string name="tournament_participants">Tournament participants:</string>
    <string name="a_lot_of_information_about_selected_football_club">A lot of information about selected football club</string>
    <string name="delete">delete</string>
    <string name="updated_list">List of clubs was updated</string>
    <string name="enter_club_s_title">Enter club\'s title</string>
    <string name="enter_city_of_new_club">Enter city of new club</string>
    <string name="enter_country_of_new_club">Enter country of new club</string>
    <string name="enter_uri_link_for_emblem_of_club">Enter uri link for emblem of club*</string>
    <string name="enter_year_of_foundation_of_club">Enter year of foundation of club*</string>
    <string name="optional">*Optional</string>
    <string name="incorrect_form">The form is filled out incorrectly, please try again</string>
    <string name="error">Something has gone wrong(</string>
    <string name="enter_uri_link_for_image_of_tournament_trophy">Enter uri link for image of tournament trophy*</string>
    <string name="enter_title_of_new_tournament">Enter title of new tournament</string>
    <string name="enter_prize_money_of_tournament">Enter prize money of tournament*</string>
    <string name="stadium">Stadium:</string>
    <string name="enter_title_of_stadium">Enter title of stadium</string>
    <string name="enter_url_link_for_photo_of_the_stadium">Enter URL link for photo of the stadium*</string>
    <string name="enter_year_of_build">Enter year of build*</string>
    <string name="enter_capacity_of_the_stadium">Enter capacity of the Stadium</string>
    <string name="choose_stadium_from_list_or_create_new_using_variant_add_new_and_button_in_right_bottom_part">*choose stadium from list or create new using variant \'Add new\' and button in right bottom part</string>
    <string name="click_to_stadium_to_get_more_information">Click to stadium to get more information</string>
    <string name="selected_club_error">The selected club is already participating in this tournament</string>
    <string name="change_attendance">change attendance</string>
</resources>