<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/startPageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/welcome_to_the_start_page_choose_type_of_information_which_u_want_to_see"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startTournamentsButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tournaments"
        app:layout_constraintEnd_toStartOf="@+id/startClubsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startPageTextView" />

    <Button
        android:id="@+id/startClubsButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/clubs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startTournamentsButton"
        app:layout_constraintTop_toBottomOf="@+id/startPageTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>